fixed up on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -63,7 +63,6 @@
     background-image: url("./images/HI_RES_NA.jpeg");
     background-position: bottom;
     background-size: cover;
-    height: 100%
   }
   .image-segment  {
     height: 35%;
